I tried to fix the spacing for the HERO

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ html {
 body {
     background-color: var(--light-color);
     color: var(--dark-color);
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     overflow-x: hidden;
 }
@@ -109,8 +109,8 @@ h1 {
 
 /** Section 1: HERO **/
 .hero-section {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,7 +122,7 @@ h1 {
 }
 
 .hero-section .hero-img img {
-    max-width: 100%;
+    width: 800px;
     height: auto;
 }
 
@@ -210,8 +210,8 @@ h1 {
 
 /** Experience **/
 .experience {
-    padding: 0 20vw;
-    height: 100vh;
+    padding: 0 20%;
+    height: 100%;
 }
 
 
